Fix error which meant text-overflow wasn't working correctly.

--- a/ImportantBits.bowtie/style/style.css
+++ b/ImportantBits.bowtie/style/style.css
@@ -32,10 +32,12 @@ body {
 	z-index: 10;
 	bottom: 0;
 	left: 0;
+	overflow: hidden;
 	padding: 8px 8px 8px 82px;
+	max-width: 199px;
 	height: 26px;
 	background: rgba(0,0,0,.5);
-	border-radius: 0 10px 0 0;
+	border-radius: 0 15px 0 0;
 }
 
 #title {
